--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+    <h1 class="app-title">Tic-Tac-Tao Game</h1>
     <div class="board">
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">0</div>
+            <div class="box">1</div>
+            <div class="box">2</div>
         </div>
 
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
         </div>
 
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            <div class="box">8</div>
         </div>
     </div>
     <script src="./scripts.js"></script>
