--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="app-title">Tic-Tac-Tao Game</h1>
     <div class="board">
         <div class="row">
-            <div class="box">0</div>
+            <div class="box" id="b1">0</div>
             <div class="box">1</div>
             <div class="box">2</div>
         </div>
