--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="board">
         <div class="row">
             <div class="box" id="b1">0</div>
-            <div class="box">1</div>
+            <div class="box" id="b2">1</div>
             <div class="box">2</div>
         </div>
 
