--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
     <h1 class="app-title">Tic-Tac-Tao Game</h1>
+    <p class="current-player">Current Player: <span id="currentPlayer">X</span></p>
     <div class="board">
         <div class="row">
-            <div class="box" id="b1">0</div>
-            <div class="box" id="b2">1</div>
-            <div class="box">2</div>
+            <div class="box" onclick="selectBox(0)">0</div>
+            <div class="box" onclick="selectBox(1)">1</div>
+            <div class="box" onclick="selectBox(2)">2</div>
         </div>
 
         <div class="row">
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
+            <div class="box" onclick="selectBox(3)">3</div>
+            <div class="box" onclick="selectBox(4)">4</div>
+            <div class="box" onclick="selectBox(5)">5</div>
         </div>
 
         <div class="row">
-            <div class="box">6</div>
-            <div class="box">7</div>
-            <div class="box">8</div>
+            <div class="box" onclick="selectBox(6)">6</div>
+            <div class="box" onclick="selectBox(7)">7</div>
+            <div class="box" onclick="selectBox(8)">8</div>
         </div>
     </div>
     <script src="./scripts.js"></script>
