Reset Button Created

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="box" onclick="selectBox(8)">8</div>
         </div>
     </div>
+    <button class="reset-button" onclick="resetBoard()">Reset Game</button>
     <script src="./scripts.js"></script>
 </body>
 </html>
